2000-05-17  Steve Langasek <vorlon@dodds.net>

	* common/common_gtk.h: Changed __common_gui_h to __common_gtk_h.

	* server/glib-driver.c: Used the G_PRIORITY_DEFAULT define in
	place of constant as argument.

2000-05-17  Bibek Sahu <scorpio@dodds.net>

	* server/Makefile.am: Added glib-driver.c and glib-driver.h, which
	are used by the console server.

	* server/glib-driver.[ch]: Functions necessary for the console
	server.
	
	* server/gnocatan-server-console.c: Added some muscle to the
	skeleton: Implemented some of the stuff necessary for a console
	server.

	* server/server.h: Added some headers that it depended on, so it
	didn't scream at me when I tried to include it just for the Player
	structure.

2000-05-17  Bibek Sahu <scorpio@dodds.net>

	* configure.in: added GLIB configuration.

	* common/common_gtk.c, common/driver.h: Added hooks for input
	read/write callbacks and [server] player update callbacks.
	Actually put the input read/write callbacks into
	common/common_gtk.c.
	
	* common/network.c, server/server.c: Switched to using driver's
	input read/write callbacks.

	* server/server.c, server/player.c: Switched to using driver's
	player update callbacks.

	* server/Makefile.am: Added preliminary files for gui-less server.
	
	* server/gnocatan-server.c: Connect the server player-update
	functions.
	
	* server/gnocatan-server-console.c: Preliminary skeleton code for
	gui-less server.
	
2000-05-15  Steve Langasek <vorlon@dodds.net>

	* client/connect.c: Set reasonable defaults for the connect dialog
	if there isn't a saved config (shuts up GTK, too).

	* common/Makefile.am, client/Makefile.am, server/Makefile.am:
	Changed library name from libgnocatan_gui.a to libgnocatan_gtk.a,
	allowing for the possibility of multiple front-ends

2000-05-13  Bibek Sahu <scorpio@dodds.net>

	* common/driver.[ch], client/gnocatan.c, server/gnocatan-server.c:
	Moved the global driver definition to driver.c, and added a function