@@ -21,11 +21,11 @@ typedef struct {
 
 	/* Function to write logs and data to the system display */
 	LogFunc log_write; /* ==> void log_write( gint msg_type, gchar *text ); */
-	
+
 	/* event-loop related functions */
-	gint (*input_add_read)( gint fd, gpointer func, gpointer param );
-	gint (*input_add_write)( gint fd, gpointer func, gpointer param );
-	void (*input_remove)( gint tag );
+	guint (*input_add_read)( gint fd, gpointer func, gpointer param );
+	guint (*input_add_write)( gint fd, gpointer func, gpointer param );
+	void (*input_remove)( guint tag );
 
 	/* callbacks for the server */
 	void (*player_added)(void *player);		/* these really should be ...*/
